Update solutions logic
